--- a/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Create.cshtml
+++ b/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Create.cshtml
@@ -1,31 +1,37 @@
-﻿@model MedicalAppoiments.Persistance.Models.appointmentsModel.AppointmentSaveDTO
+﻿@model MedicalAppoiments.Domain.Entities.appointments.DoctorAvailability
 
 @{
     ViewData["Title"] = "Create";
 }
 
+<h1>Create</h1>
 
-
-<h4>Create an appointment</h4>
+<h4>Doctor Availability</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        
             <div class="form-group">
                 <label asp-for="DoctorID" class="control-label"></label>
                 <input asp-for="DoctorID" class="form-control" />
                 <span asp-validation-for="DoctorID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="PatientID" class="control-label"></label>
-                <input asp-for="PatientID" class="form-control" />
-                <span asp-validation-for="PatientID" class="text-danger"></span>
+                <label asp-for="AvailableDate" class="control-label"></label>
+                <input asp-for="AvailableDate" class="form-control" />
+                <span asp-validation-for="AvailableDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="AppointmentDate" class="control-label"></label>
-                <input asp-for="AppointmentDate" class="form-control" />
-                <span asp-validation-for="AppointmentDate" class="text-danger"></span>
+                <label asp-for="StartTime" class="control-label"></label>
+                <input asp-for="StartTime" class="form-control" />
+                <span asp-validation-for="StartTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EndTime" class="control-label"></label>
+                <input asp-for="EndTime" class="form-control" />
+                <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
