--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AppointmentController1" asp-action="index">Appointments</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DoctorAvailibilityController1" asp-action="index">Doctor Availibility</a>
+                        </li>
                     </ul>
                 </div>
             </div>
