--- a/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Details.cshtml
+++ b/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Doctor Availability</h4>
+    <h4>DoctorAvailability</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.AvailabilityID }) |
     <a asp-action="Index">Back to List</a>
 </div>
