--- a/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Edit.cshtml
+++ b/MedicalAppointmentWeb/Views/DoctorAvailibilityController1/Edit.cshtml
@@ -1,18 +1,23 @@
-﻿@model MedicalAppoiments.Persistance.Models.DoctorAvailivilityModel.DoctorAvailibilitySaveDTO
+﻿@model MedicalAppoiments.Persistance.Models.DoctorAvailivilityModel.DoctorAvailibilityUpdateDTO
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>DoctorAvailibilitySaveDTO</h4>
+<h4>DoctorAvailibilityUpdateDTO</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="AvailabilityID" class="control-label" ></label>
+                <input asp-for="AvailabilityID" class="form-control" readonly />
+                <span asp-validation-for="AvailabilityID" class="text-danger"></span>
+            </div>
+            <div class="form-group" hidden>
                 <label asp-for="DoctorID" class="control-label"></label>
                 <input asp-for="DoctorID" class="form-control" />
                 <span asp-validation-for="DoctorID" class="text-danger"></span>
@@ -33,7 +38,7 @@
                 <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
