User Index created, missing ( details,edit, creat), DTO's and mapper

--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DoctorAvailibilityController1" asp-action="index">Doctor Availibility</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UsersController1" asp-action="index">Users</a>
+                        </li>
                     </ul>
                 </div>
             </div>
