--- a/MedicalAppointmentWeb/wwwroot/css/site.css
+++ b/MedicalAppointmentWeb/wwwroot/css/site.css
@@ -20,3 +20,13 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.bg-success {
+    background-color: green;
+    color: white;
+}
+
+.bg-danger {
+    background-color: red;
+    color: white;
+}
