--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DoctorsController1" asp-action="index">Doctors</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PatientController1" asp-action="index">Patients</a>
+                        </li>
                     </ul>
                 </div>
             </div>
