precentacion de Ins provider ready

--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="PatientController1" asp-action="index">Patients</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="InsuranceProvidersController1" asp-action="index">InsuranceProviders</a>
+                        </li>
                     </ul>
                 </div>
             </div>
