--- a/MedicalAppointmentWeb/Views/PatientController1/Index.cshtml
+++ b/MedicalAppointmentWeb/Views/PatientController1/Index.cshtml
@@ -19,10 +19,13 @@
                 @Html.DisplayNameFor(model => model.PatientID)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsActive)
+                @Html.DisplayNameFor(model => model.InsuranceName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.InsuranceName)
+                @Html.DisplayNameFor(model => model.DateOfBirth)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.IsActive)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FirstName)
@@ -43,10 +46,13 @@
                 @Html.DisplayFor(modelItem => item.PatientID)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsActive)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.InsuranceName)
+            </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateOfBirth)
+                </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsActive)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.FirstName)
@@ -55,7 +61,7 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                    @Html.ActionLink("Edit", "Edit", new {  id=item.PatientID  }) |
+                    @Html.ActionLink("Edit", "Edit", new { id=item.PatientID }) |
                     @Html.ActionLink("Details", "Details", new {  id=item.PatientID  }) |
                
             </td>
