NetWork Type, missing edit and details

--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="InsuranceProvidersController1" asp-action="index">InsuranceProviders</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NetWorkTypeController1" asp-action="index">NetWorkType</a>
+                        </li>
                     </ul>
                 </div>
             </div>
