--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="StatusController1" asp-action="index">Status</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AvailabilityController1" asp-action="index">AvalabilityModes</a>
+                        </li>
                     </ul>
                 </div>
             </div>
