Actualizando Controller Medical.

--- a/MedicalAppointmentWeb/Views/AppointmentController1/Index.cshtml
+++ b/MedicalAppointmentWeb/Views/AppointmentController1/Index.cshtml
@@ -64,8 +64,8 @@
             <td>
 
             <td>
-                @Html.ActionLink("Edit", "Edit", new {  id=item.AppointmentID  }) |
-                    @Html.ActionLink("Details", "Details", new { id=item.AppointmentID  }) |
+                @Html.ActionLink("Edit", "Edit", new {  id=item.DoctorID  }) |
+                    @Html.ActionLink("Details", "Details", new { id=item.DoctorID  }) |
                 
             </td>
         </tr>
