--- a/MedicalAppointmentWeb/Views/DoctorsController1/Index.cshtml
+++ b/MedicalAppointmentWeb/Views/DoctorsController1/Index.cshtml
@@ -61,8 +61,8 @@
                 @Html.DisplayFor(modelItem => item.LastName)
             </td>
             <td>
-                    @Html.ActionLink("Edit", "Edit", new {  id=item.DoctorID  }) |
-                    @Html.ActionLink("Details", "Details", new {  id=item.DoctorID  }) |
+                    @Html.ActionLink("Edit", "Edit", new {  id=item.AvailabilityModeId  }) |
+                    @Html.ActionLink("Details", "Details", new {  id=item.AvailabilityModeId  }) |
                
             </td>
         </tr>
