--- a/MedicalAppointmentWeb/Views/NotificationController1/Edit.cshtml
+++ b/MedicalAppointmentWeb/Views/NotificationController1/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MedicalAppoiments.Domain.Entities.system.Notifications
+﻿@model MedicalAppoiments.Persistance.Models.SystemModel.Notifications.NotificationUpdateDTO
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,15 +6,16 @@
 
 <h1>Edit</h1>
 
-<h4>Notifications</h4>
+<h4>NotificationUpdateDTO</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        
             <div class="form-group">
                 <label asp-for="NotificationID" class="control-label"></label>
-                <input asp-for="NotificationID" class="form-control" />
+                <input asp-for="NotificationID" class="form-control" readonly/>
                 <span asp-validation-for="NotificationID" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -26,11 +27,6 @@
                 <label asp-for="Message" class="control-label"></label>
                 <input asp-for="Message" class="form-control" />
                 <span asp-validation-for="Message" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SentAt" class="control-label"></label>
-                <input asp-for="SentAt" class="form-control" />
-                <span asp-validation-for="SentAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
