--- a/MedicalAppointmentWeb/Views/AppointmentADMController1/Create.cshtml
+++ b/MedicalAppointmentWeb/Views/AppointmentADMController1/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Create</h1>
 
-<h4>AppointmentSaveDTO</h4>
+<h4>AppointmentSave API</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
