--- a/MedicalAppointmentWeb/Views/AppointmentADMController1/Details.cshtml
+++ b/MedicalAppointmentWeb/Views/AppointmentADMController1/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>AppointmentsModel</h4>
+    <h4>Appointments details API</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
