--- a/MedicalAppointmentWeb/Views/AppointmentADMController1/Edit.cshtml
+++ b/MedicalAppointmentWeb/Views/AppointmentADMController1/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit</h1>
 
-<h4>Appointment Update</h4>
+<h4>Appointment Update API </h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
