--- a/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointmentWeb/Views/Shared/_Layout.cshtml
@@ -58,6 +58,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="AppointmentADMController1" asp-action="index">Appointment API</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DoctorAvailibilityADMController1" asp-action="index">DoctorAvailibility API</a>
+                        </li>
                     </ul>
                 </div>
             </div>
